Make sure highlighted VE tools don't overlap bottom border
OO-ui tools have negative margins by default for some reason.
Setting bottom margin explicitly to 0 so that it doesn't overlap
the border underneath.

--- a/less/modules/editor/VisualEditorOverlay.less
+++ b/less/modules/editor/VisualEditorOverlay.less
@@ -73,7 +73,6 @@
 			height: 3em;
 			display: block;
 			float: left;
-			margin-left: 1em;
 			text-indent: -999px;
 			width: 24px;
 			padding: 0 12px;
@@ -85,7 +84,7 @@
 			border: none;
 			// FIXME: Remove this reset once oo-ui supports skinning
 			border-radius: 0;
-			margin-top: -@headerMargin;
+			margin: -@headerMargin 0 0 1em;
 			padding-bottom: @headerMargin;
 
 			&.oo-ui-tool-active {
